# oncoref

./: .gitignore  MANIFEST.in  README.md  deploy.sh  develop.sh  format.sh  lint.sh  mkdocs.yml  pyproject.toml  test.sh
.github/workflows/: docs.yml  release.yml  tests.yml
cancerdata/: __init__.py  _build.py  apd1.py  cache.py  cancer_genes.py  cancer_types.py  catalog.py  cli.py  coverage.py  cta.py  cta_regen.py  cta_tissues.py  data_bundle.py  data_manifest.py  expression.py  expression_engine.py  expression_registry.py  fusions.py  gene_families.py  gene_ids.py  gene_qc.py  genome.py  hpa.py  ici.py  incidence.py  load_dataset.py  normalization.py  peptides.py  plots.py  proteoforms.py  reference_data.py  response_signatures.py  samples.py  source_matrices.py  tmb.py  version.py
cancerdata/data/: cancer-cohort-aggregates.csv  cancer-testis-antigens.csv  cancer-type-registry.csv  cta-candidate-references.csv  cta-ihc-unreliable.csv  proteoform-groups-genome.csv  source-matrices.csv
docs/: api.md  index.md
oncodata/: __init__.py  apd1.py  cancer_genes.py  cancer_types.py  catalog.py  cli.py  coverage.py  cta.py  cta_regen.py  cta_tissues.py  data_bundle.py  data_manifest.py  expression.py  expression_builders.py  expression_engine.py  expression_registry.py  gene_families.py  gene_ids.py  gene_qc.py  genome.py  hpa.py  ici.py  incidence.py  load_dataset.py  normalization.py  peptides.py  plots.py  proteoforms.py  reference_data.py  response_signatures.py  source_matrices.py  version.py
oncodata/data/: cancer-subtype-groupings.csv  cancer-tmb.csv  cta-ihc-unreliable.csv  family-burden-map.csv
oncoref/: __init__.py  _reference_sources.py  antigen_coverage.py  apd1.py  cancer_genes.py  cancer_ontology.py  cancer_types.py  catalog.py  cli.py  cohorts.py  coverage.py  cta.py  cta_coverage.py  cta_curation_plots.py  cta_peptides.py  cta_regen.py  cta_tissues.py  data_bundle.py  data_manifest.py  expression.py  expression_builders.py  expression_engine.py  expression_registry.py  fusions.py  gene_families.py  gene_ids.py  gene_qc.py  genome.py  hpa.py  ici.py  ici_response.py  incidence.py  load_dataset.py  normalization.py  peptides.py  plots.py  proteoforms.py  reference_data.py  response_signatures.py  source_matrices.py  (+2 more)
oncoref/data/: cancer-apd1-response.csv  cancer-cohort-aggregates.csv  cancer-expression-source-candidates.csv  cancer-fusion-citation-audit.csv  cancer-fusions.csv  cancer-ici-response-estimates.csv  cancer-ici-response.csv  cancer-incidence-mortality.csv  cancer-key-gene-citation-audit.csv  cancer-key-genes.csv  cancer-mismatch-repair-statuses.csv  cancer-normal-tissue-map.csv  cancer-reference-expression-availability.csv  cancer-response-signatures.csv  cancer-subtype-groupings.csv  cancer-tmb.csv  cancer-type-registry.csv  cancer-who-soft-tissue-bone-audit.csv  clean-tpm-biological-housekeeping-genes.csv  clean-tpm-censored-genes.csv  cohort-registry.csv  cta-candidate-references.csv  cta-clinical-targets.csv  cta-specificity-audit.csv  degenerate-subtype-pairs.csv  ensembl-id-aliases.csv  expression-artifact-gene-universe-deltas.csv  expression_sources.yaml  fusion-surrogate-expression.csv  gse294016-sample-diagnoses.csv  representative-source-adjudications.csv  ribosomal-protein-pseudogenes.csv  source-matrices.csv  tissue-burden-map.csv
scripts/: build_data_tarball.sh  build_entrez_gene_mappings.py  build_gdc_source.py  build_geo_matrix.py  build_recount3_source.py  build_treehouse_source.py  canonicalize_reference_summary_sources.py  derive_mbl_subgroup_source_matrices.py  generate_canonical_gene_space.py  generate_cohort_percentiles.py  generate_ensembl_id_aliases.py  generate_proteoform_groups.py  generate_reference_availability.py  generate_representatives.py  generate_within_sample_top5.py  merge_expression_artifact_rebuild.py  rebuild_expression_artifacts.py  regenerate_cta_table.py  regenerate_plots.py  stage_source_matrices.py  sync_cancer_type_registry.py  sync_cta_table.py
tests/: test_apd1.py  test_api_structure.py  test_base_layer.py  test_build_generators.py  test_cancer_genes.py  test_cancer_type_registry.py  test_cancer_type_registry_sync.py  test_cancer_types.py  test_canonicalize_reference_summary_sources.py  test_catalog.py  test_cli.py  test_coverage.py  test_cta.py  test_cta_regen.py  test_cta_sync.py  test_cta_table_integrity.py  test_data_bundle.py  test_data_manifest.py  test_data_parity.py  test_expression.py  test_expression_engine.py  test_expression_sources.py  test_exprmeta.py  test_fusions.py  test_gene_families.py  test_gene_ids.py  test_gene_qc.py  test_genome.py  test_genome_pick.py  test_hpa.py  test_ici.py  test_ici_estimates.py  test_incidence.py  test_load_dataset.py  test_normalization.py  test_ontology_hierarchy_curation.py  test_optional_genome_dependency.py  test_peptides.py  test_plots.py  test_proteoform_genome.py  (+13 more)
