[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncoref"
dynamic = ["version"]
description = "Curated cancer reference data: ontology, TMB, incidence/mortality, and expression"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Alex Rubinsteyn", email = "alex.rubinsteyn@unc.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "PyYAML",
]

[project.optional-dependencies]
genome = [
    "pyensembl",
]
plots = [
    "matplotlib",
    "adjustText",
    "matplotlib_venn>=1.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "matplotlib",
    "adjustText",
    "matplotlib_venn>=1.0",
    "pyensembl",
]

[project.scripts]
oncoref = "oncoref.cli:main"

[project.urls]
Homepage = "https://github.com/pirl-unc/oncoref"
Documentation = "https://pirl-unc.github.io/oncoref/"
Repository = "https://github.com/pirl-unc/oncoref"

[tool.setuptools.dynamic]
version = {attr = "oncoref.version.__version__"}

[tool.setuptools]
# Make the package-data list authoritative (see pirlygenes #5.3.0 wheel-bloat
# regression): without this, VCS auto-discovery ships every git-tracked file
# and ignores the exclude rules below.
include-package-data = false

[tool.setuptools.packages.find]
include = ["oncoref*"]

[tool.setuptools.package-data]
# Small curated tables ship in the wheel. The heavy per-cohort expression
# bundle (added in a later milestone) downloads on first access — never bundled.
oncoref = [
    "data/*.csv",
    "data/*.csv.gz",
    "data/*.yaml",
]

[tool.setuptools.exclude-package-data]
oncoref = [
    "data/cancer-reference-expression/*",
    "data/cancer-reference-expression-percentiles/*",
    "data/cancer-reference-expression-percentiles-proteoform/*",
    "data/cancer-reference-expression-representatives/*",
    "data/cancer-reference-expression-within-sample-top5/*",
    "data/cancer-reference-expression-within-sample-top5-proteoform/*",
    "data/pan-cancer-expression.csv",
    "data/hpa-cell-type-expression.csv",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["oncoref", "tests"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without explicit strict
    "SIM108", # use ternary operator instead of if-else
    "UP007",  # use X | Y for type unions (need Python 3.10+)
    "RUF001", # ambiguous unicode in code (× / ⁺ / ⁻ are intentional sci notation)
    "RUF002", # ambiguous unicode in docstrings (same)
    "RUF003", # ambiguous unicode in comments (same)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "RUF012"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["oncoref"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["oncoref"]
omit = ["oncoref/version.py"]
